package domain;

public enum Origen {
  CARGA_MANUAL,
  PROVENIENTE_DE_DATASET,
  PROVISTO_POR_CONTRIBUYENTE
}
